style(project): update code style